objects/Team_Province_Master_Data__c.object
<CustomObject>
    <fields>
        <fullName>Province_Name__c</fullName>
        <label>Province Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Structure</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Team Province Master Datas</relationshipLabel>
        <relationshipName>Team_Province_Master_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Province Master Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Province_Name__c</columns>
        <columns>Segment__c</columns>
        <columns>Team_Structure__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TPM-{000000}</displayFormat>
        <label>Team Province Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Province Master Datas</pluralLabel>
    <recordTypes>
        <fullName>On_Going</fullName>
        <active>true</active>
        <label>On-Going</label>
    </recordTypes>
    <recordTypes>
        <fullName>Year_End</fullName>
        <active>true</active>
        <label>Year-End</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>